force-app/main/default/objects/Cohort__c/fields/Cohort_ID__c.field-meta.xml
<CustomField>
    <fullName>Cohort_ID__c</fullName>
    <label>Cohort ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>