force-app/main/default/objects/Cohort__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cohorts</relationshipLabel>
    <relationshipName>Cohorts</relationshipName>
    <type>Lookup</type>
</CustomField>