force-app/main/default/objects/Cohort__c/fields/Teaching_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teaching Assistant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cohorts (Teaching Assistant)</relationshipLabel>
    <relationshipName>Cohorts1</relationshipName>
    <type>Lookup</type>
</CustomField>