force-app/main/default/objects/Cohort__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <referenceTo>Test__c</referenceTo>
    
</CustomField>